--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(36, 36, 36, 0.87);
-  background-color: #dad4d4;
+  background-color: #eee;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -45,19 +45,12 @@ a {
   text-decoration: inherit;
   color: inherit;
 }
-a:hover {
-  opacity: 0.5;
-  transition: 0.3s opacity;
-}
 
 .layout {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100vw;
   box-sizing: border-box;
 }
 
