--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
 :root {
+  --current-navbar-width: var(--navbar-expanded-width);
+  --navbar-expanded-width: 200px;
+  --navbar-collapsed-width: 75px;
+  --navbar-mobile-height: 60px;
+  --navbar-bg-color: #f0f0f0;
+  --navbar-text-color: #333;
+  --navbar-hover-color: #e37b1f;
+  --navbar-active-color: #d0d0d0;
+  --navbar-border-color: #ccc;
+
   font-family: system-ui, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -18,10 +23,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 #root {
   min-height: 100vh;
   width: 100%;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,14 +38,12 @@
 
 h1 {
   color: #222;
-
   font-size: 3.2em;
   line-height: 1.1;
 }
 
 h2 {
   color: #888;
-
   font-size: 2.8em;
   line-height: 1.1;
 }
@@ -49,13 +56,19 @@ a {
 .layout {
   display: flex;
   align-items: center;
-  width: 100%;
+  width: calc(100% - var(--current-navbar-width));
+  margin-left: var(--current-navbar-width);
   max-width: 100vw;
   box-sizing: border-box;
+  transition: margin-left 0.4s cubic-bezier(0.4, 0, 0.2, 1), width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media (max-width: 800px) {
   .layout {
     flex-direction: column-reverse;
+    padding-bottom: var(--navbar-mobile-height);
+    margin-left: 0;
+    width: 100%;
+    transition: none;
   }
 }
