added UID in userData, saved navbar state in localStorage and created filter in taskSection with a hook

--- a/src/components/tasksSection/TasksSection.css
+++ b/src/components/tasksSection/TasksSection.css
@@ -6,6 +6,11 @@
   padding: 1rem; /* testing - BORRAR O MODIFICAR */
 }
 
+.task-card-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media (max-width: 1150px) {
   .tasks-list-section {
     width: 100%;
