--- a/src/components/tasksSection/TasksSection.css
+++ b/src/components/tasksSection/TasksSection.css
@@ -2,11 +2,81 @@
   max-width: min(900px, 65vw);
   min-width: 0;
   box-sizing: border-box;
-  border: 1px dashed lightblue; /* testing - BORRAR */
-  padding: 1rem; /* testing - BORRAR O MODIFICAR */
+  border-radius: 0.5rem;
+  border: 1px solid var(--navbar-border-color);
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.task-card-container {
+.tasks-list-section .tasks-options {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.tasks-list-section .tasks-options button {
+  all: unset;
+  background-color: var(--navbar-active-color);
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease,
+    transform 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tasks-list-section .tasks-options button:first-child {
+  border-top-left-radius: 0.5rem;
+}
+
+.tasks-list-section .tasks-options button:last-child {
+  border-top-right-radius: 0.5rem;
+}
+
+.tasks-list-section .tasks-options button:hover {
+  background-color: var(--navbar-hover-color);
+  transform: scale(1.03);
+}
+
+.tasks-list-section .task-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%; /*revisar de mejorarlo con clamp o min max para adaptarlo a todas las pantallas*/
+
+  padding: 0 1rem;
+}
+
+.tasks-list-section .task-form input {
+  all: unset;
+  width: 80%;
+  padding: 0.5rem 1rem 0.5rem 0;
+
+  box-sizing: border-box;
+}
+
+.tasks-list-section .task-form button {
+  all: unset;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  transition: transform 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tasks-list-section .task-form button:hover {
+  transform: scale(1.03);
+}
+
+.tasks-list-section .task-cards-wrapper {
+  padding: 0 1rem 1rem 1rem;
+}
+
+.tasks-list-section .task-card-container {
   display: flex;
   justify-content: space-between;
 }
