--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,8 @@ a {
   margin-left: var(--current-navbar-width);
   max-width: 100vw;
   box-sizing: border-box;
-  transition: margin-left 0.4s cubic-bezier(0.4, 0, 0.2, 1), width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: margin-left 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+    width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media (max-width: 800px) {
