--- a/src/components/tasksSection/TasksSection.css
+++ b/src/components/tasksSection/TasksSection.css
@@ -1,63 +1,68 @@
 .tasks-list-section {
-  max-width: min(900px, 65vw);
-  min-width: 0;
+  max-width: clamp(300px, 65vw, 900px);
   box-sizing: border-box;
-  border-radius: 0.5rem;
   border: 1px solid var(--navbar-border-color);
+  border-radius: var(--border-radius);
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--gap-standard);
 }
 
-.tasks-list-section .tasks-options {
-  width: 100%;
+.tasks-options {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  width: 100%;
 }
 
 .tasks-list-section .tasks-options button {
   all: unset;
   background-color: var(--navbar-active-color);
+  color: var(--navbar-text-color);
   width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: background-color 0.3s ease,
-    transform 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--transition-ease),
+    transform var(--transition-quick);
 }
 
 .tasks-list-section .tasks-options button:first-child {
-  border-top-left-radius: 0.5rem;
+  border-top-left-radius: var(--border-radius);
 }
 
 .tasks-list-section .tasks-options button:last-child {
-  border-top-right-radius: 0.5rem;
+  border-top-right-radius: var(--border-radius);
 }
 
 .tasks-list-section .tasks-options button:hover {
   background-color: var(--navbar-hover-color);
   transform: scale(1.03);
+  color: #fff;
 }
 
 .tasks-list-section .task-form {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%; /*revisar de mejorarlo con clamp o min max para adaptarlo a todas las pantallas*/
-
-  padding: 0 1rem;
+  width: clamp(200px, 100%, 800px);
+  padding: 0 var(--padding-standard);
+  margin-bottom: var(--gap-standard);
 }
 
 .tasks-list-section .task-form input {
   all: unset;
   width: 80%;
   padding: 0.5rem 1rem 0.5rem 0;
-
+  border-bottom: 1px solid var(--navbar-border-color);
   box-sizing: border-box;
+}
+
+.tasks-list-section .task-form input::placeholder {
+  color: var(--navbar-text-color);
+  opacity: 0.7;
 }
 
 .tasks-list-section .task-form button {
@@ -65,7 +70,8 @@
   height: 30px;
   width: 30px;
   cursor: pointer;
-  transition: transform 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--navbar-hover-color);
+  transition: transform var(--transition-quick);
 }
 
 .tasks-list-section .task-form button:hover {
@@ -73,12 +79,56 @@
 }
 
 .tasks-list-section .task-cards-wrapper {
-  padding: 0 1rem 1rem 1rem;
+  padding: 0 var(--padding-standard) var(--padding-standard);
+  display: flex;
+  flex-direction: column-reverse;
+  gap: calc(var(--gap-standard) / 2);
 }
 
 .tasks-list-section .task-card-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+  border-bottom: 1px dashed var(--navbar-border-color);
+}
+
+.tasks-list-section .task-card-container:first-child {
+  /* es el primero y no el último, porque tengo el flex-direction en column reverse */
+  border-bottom: none;
+}
+
+.tasks-list-section .task-card-container input[type="checkbox"] {
+  appearance: none;
+  min-width: 20px;
+  min-height: 20px;
+  border: 2px solid var(--navbar-text-color);
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  display: grid;
+  place-content: center;
+  transition: background-color 0.2s, border-color 0.2s;
+}
+
+.tasks-list-section .task-card-container input[type="checkbox"]::before {
+  content: "";
+  width: calc(20px * 0.6);
+  height: calc(20px * 0.6);
+  transform: scale(0);
+  transition: transform 0.2s ease-in-out;
+  box-shadow: inset 1em 1em var(--navbar-hover-color);
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+.tasks-list-section .task-card-container input[type="checkbox"]:checked {
+  background-color: var(--navbar-active-color);
+  border-color: var(--navbar-hover-color);
+}
+
+.tasks-list-section
+  .task-card-container
+  input[type="checkbox"]:checked::before {
+  transform: scale(1);
 }
 
 @media (max-width: 1150px) {
