added checkbox functionality in tasks section

--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,8 @@ a {
   margin-left: var(--current-navbar-width);
   max-width: 100vw;
   box-sizing: border-box;
-  transition: margin-left 0.4s cubic-bezier(0.4, 0, 0.2, 1),
-    width 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: margin-left 0.4s var(--transition-quick),
+    width 0.4s var(--transition-quick);
 }
 
 @media (max-width: 800px) {
