--- a/src/components/taskCard/TaskCard.css
+++ b/src/components/taskCard/TaskCard.css
@@ -2,6 +2,10 @@
   color: var(--navbar-text-color);
   font-size: 1.1em;
   flex-grow: 1;
-  padding-right: 1rem;
-  word-break: break-word;
+  padding-left: var(--padding-standard);
+}
+
+.task-card .task-completed {
+  text-decoration: line-through;
+  opacity: 0.7; 
 }
