--- a/src/components/tasksSection/TasksSection.css
+++ b/src/components/tasksSection/TasksSection.css
@@ -87,6 +87,7 @@
 
 .tasks-list-section .task-card-container {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 0;
