--- a/src/components/taskCard/TaskCard.css
+++ b/src/components/taskCard/TaskCard.css
@@ -2,10 +2,27 @@
   color: var(--navbar-text-color);
   font-size: 1.1em;
   flex-grow: 1;
-  padding-left: var(--padding-standard);
+  padding: 0 var(--padding-standard);
+
+  transform: translateY(20px);
+  opacity: 0;
+  animation: slideInUp var(--animation-duration-task-appear) forwards;
 }
 
 .task-card .task-completed {
   text-decoration: line-through;
-  opacity: 0.7; 
+  opacity: 0.7;
+
+  transition: all var(--animation-duration-task-complete) ease;
+}
+
+@keyframes slideInUp {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
