--- a/src/components/tasksSection/TasksSection.css
+++ b/src/components/tasksSection/TasksSection.css
@@ -7,10 +7,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--gap-standard);
-
-  transform: translateY(30px);
-  opacity: 0;
-  animation: fadeInContainer 0.8s ease forwards;
 }
 
 .tasks-options {
@@ -104,11 +100,8 @@
   align-items: center;
   padding: 0.5rem 0;
   border-bottom: 1px dashed var(--navbar-border-color);
-
   position: relative;
   overflow: hidden;
-
-  animation: fadeInSlideIn var(--animation-duration-task-appear) ease forwards;
 }
 
 .tasks-list-section .task-card-container:first-child {
@@ -142,9 +135,7 @@
   border-color: var(--navbar-hover-color);
 }
 
-.tasks-list-section
-  .task-card-container
-  input[type="checkbox"]:checked::before {
+.tasks-list-section .task-card-container input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
 
@@ -153,13 +144,11 @@
   transform: translateX(10px);
   pointer-events: none;
   transition: opacity 0.3s ease, transform 0.3s ease;
-
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-
   min-width: 50px;
   min-height: 25px;
 }
@@ -204,27 +193,5 @@
     flex-direction: column;
     min-width: 25px;
     min-height: 50px;
-  }
-}
-
-@keyframes fadeInContainer {
-  from {
-    transform: translateY(30px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeInSlideIn {
-  from {
-    opacity: 0;
-    transform: translateY(10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
   }
 }
