--- a/src/pages/recycle_bin/RecycleBin.css
+++ b/src/pages/recycle_bin/RecycleBin.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-.recycle-bin-main-content {
+.recycle-bin-page .recycle-bin-main-content {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,9 @@
   box-sizing: border-box;
 }
 
-.tasks-list-section {
+.recycle-bin-page .tasks-list-section {
+  width: min(100%, 600px);
+  min-height: 100px;
   box-sizing: border-box;
   border: 1px solid var(--navbar-border-color);
   border-radius: var(--border-radius);
@@ -27,56 +29,50 @@
   display: flex;
   flex-direction: column;
   gap: var(--gap-standard);
-
-  transform: translateY(30px);
-  opacity: 0;
-  animation: fadeInContainer 0.8s ease forwards;
 }
 
-.tasks-list-section .task-cards-wrapper {
+.recycle-bin-page .tasks-list-section .task-cards-wrapper {
   padding: 0 var(--padding-standard) var(--padding-standard);
   display: flex;
   flex-direction: column-reverse;
   gap: calc(var(--gap-standard) / 2);
 }
 
-.tasks-list-section .task-card-container {
+.recycle-bin-page .tasks-list-section .task-card-container {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 0;
   border-bottom: 1px dashed var(--navbar-border-color);
-
   position: relative;
   overflow: hidden;
-
-  animation: fadeInSlideIn var(--animation-duration-task-appear) ease forwards;
 }
 
-.tasks-list-section .task-card-container:first-child {
-  /* es el primero y no el último, porque tengo el flex-direction en column reverse */
+.recycle-bin-page .tasks-list-section .task-card-container:first-child {
   border-bottom: none;
 }
 
-.tasks-list-section .task-recover-delete-container {
+.recycle-bin-page .tasks-list-section .task-recover-delete-container {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-
   min-width: 50px;
   min-height: 25px;
 }
 
-.tasks-list-section .task-recover-delete-container button {
+.recycle-bin-page .tasks-list-section .task-recover-delete-container button {
   all: unset;
   min-width: 25px;
   min-height: 25px;
   transition: transform 0.2s ease;
 }
 
-.tasks-list-section .task-recover-delete-container button:hover {
+.recycle-bin-page
+  .tasks-list-section
+  .task-recover-delete-container
+  button:hover {
   transform: translateX(-2px);
   cursor: pointer;
 }
