--- a/src/components/tasksSection/TasksSection.css
+++ b/src/components/tasksSection/TasksSection.css
@@ -135,7 +135,9 @@
   border-color: var(--navbar-hover-color);
 }
 
-.tasks-list-section .task-card-container input[type="checkbox"]:checked::before {
+.tasks-list-section
+  .task-card-container
+  input[type="checkbox"]:checked::before {
   transform: scale(1);
 }
 
