added localStorage to save last folder selected, and added new /all/ default folder just in frontend (it is not a folder in the back)

--- a/src/components/foldersSidebar/FoldersSidebar.css
+++ b/src/components/foldersSidebar/FoldersSidebar.css
@@ -100,6 +100,10 @@
   overflow: hidden;
 }
 
+.folders-sidebar .folder-card-container:first-child {
+  justify-content: left;
+}
+
 .folders-sidebar .folder-card-container:last-child {
   border-bottom: none;
 }
