--- a/src/components/foldersSidebar/FoldersSidebar.css
+++ b/src/components/foldersSidebar/FoldersSidebar.css
@@ -1,6 +1,6 @@
 .folders-sidebar {
   max-width: min(400px, 28vw);
-  max-height: 60px;
+  max-height: var(--foldersSection-collapsed-height);
   box-sizing: border-box;
   border: 1px solid var(--navbar-border-color);
   border-radius: var(--border-radius);
@@ -14,7 +14,7 @@
 }
 
 .folders-sidebar.expanded {
-  max-height: 1000px;
+  max-height: var(--foldersSection-expanded-height);
 }
 
 .folders-sidebar header {
