--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -119,8 +119,15 @@
 .navbar-user {
   display: flex;
   align-items: center;
-  padding: 0.75rem 1.5rem;
+  padding: 0.75rem 1.3rem;
   gap: var(--gap-standard);
+}
+
+.navbar-user img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .navbar.collapsed .navbar-user {
