--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   --navbar-collapsed-width: 75px;
   --navbar-mobile-height: 60px;
   --current-navbar-width: var(--navbar-expanded-width);
-  --foldersSection-expanded-height: 1000px;
+  /* --foldersSection-expanded-height: 300px; */
+  /*TO FIX: add max-height without lossing animations*/
   --foldersSection-collapsed-height: 60px;
   --current-foldersSection-height: var(--foldersSection-expanded-height);
   --border-radius: 0.5rem;
